WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257057
[ManagedMSE] onbufferedchange is fired too many times
https://bugs.webkit.org/show_bug.cgi?id=257057
Summary
[ManagedMSE] onbufferedchange is fired too many times
Jean-Yves Avenard [:jya]
Reported
2023-05-19 15:36:36 PDT
As seen in
https://github.com/WebKit/WebKit/pull/14092
The `bufferedchange` is fired twice as it should if the GPU process is disabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-19 15:37:06 PDT
<
rdar://problem/109586019
>
Jean-Yves Avenard [:jya]
Comment 2
2023-05-22 06:26:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14175
EWS
Comment 3
2023-05-24 01:19:50 PDT
Committed
264467@main
(dab28312bc80): <
https://commits.webkit.org/264467@main
> Reviewed commits have been landed. Closing PR #14175 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 4
2023-11-17 22:17:25 PST
***
Bug 254199
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug