Source/WebCore/platform/graphics/SourceBufferPrivate.h
@@ -81,6 +81,7 @@ public:
     virtual void removedFromMediaSource() = 0;
     virtual MediaPlayer::ReadyState readyState() const = 0;
     virtual void setReadyState(MediaPlayer::ReadyState) = 0;
+    WEBCORE_EXPORT virtual void clientReadyStateChanged(bool endOfStream);
 
     virtual bool canSwitchToType(const ContentType&) { return false; }
 
@@ -94,7 +95,6 @@ public:
     virtual void setGroupStartTimestamp(const MediaTime& mediaTime) { m_groupStartTimestamp = mediaTime; }
     virtual void setGroupStartTimestampToEndTimestamp() { m_groupStartTimestamp = m_groupEndTimestamp; }
     virtual void setShouldGenerateTimestamps(bool flag) { m_shouldGenerateTimestamps = flag; }
-    WEBCORE_EXPORT virtual void updateBufferedFromTrackBuffers(bool sourceIsEnded);
     WEBCORE_EXPORT virtual void removeCodedFrames(const MediaTime& start, const MediaTime& end, const MediaTime& currentMediaTime, bool isEnded, CompletionHandler<void()>&& = [] { });
     WEBCORE_EXPORT virtual void evictCodedFrames(uint64_t newDataSize, uint64_t maximumBufferSize, const MediaTime& currentTime, bool isEnded);
     WEBCORE_EXPORT virtual uint64_t totalTrackBufferSizeInBytes() const;
@@ -137,6 +137,8 @@ public:
 #endif
 
 protected:
+    WEBCORE_EXPORT void updateBufferedFromTrackBuffers(const Vector<PlatformTimeRanges>&, bool sourceIsEnded, CompletionHandler<void()>&& = [] { });
+
     struct ResetParserOperation { };
     struct ErrorOperation { };
     using AppendBufferOperation = Ref<SharedBuffer>;
@@ -202,6 +204,7 @@ private:
     MediaTime findPreviousSyncSamplePresentationTime(const MediaTime&);
     bool evictFrames(uint64_t newDataSize, uint64_t maximumBufferSize, const MediaTime& currentTime, bool isEnded);
     bool isAttached() const;
+    Vector<PlatformTimeRanges> trackBuffersRanges() const;
 
     bool m_hasAudio { false };
     bool m_hasVideo { false };
